# alfred-color-picker

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml
icons/: back.ai  logo.ai
src/: color_result.py  color_utils.py  info.plist  main.py
