[project]
name = "alfred-color-picker"
version = "1.0.1"
authors = [{ name = "Josh Duncan", email = "joshbduncan@gmail.com" }]
description = "Quickly browse, convert, and generate color palettes directly from Alfred."
requires-python = ">=3.12"
dependencies = ["alfred-results"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.4", "ty>=0.0.20"]

[tool.uv.sources]
alfred-results = { path = "../alfred-results", editable = true }
